--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
         <div class="privacy-notice">
             <h3>Información del Responsable</h3>
             <div class="company-info">
-                <p><strong>Razón Social:</strong> [Tu Razón Social Aquí]</p>
-                <p><strong>Correo Electrónico:</strong> [tu-email@ejemplo.com]</p>
-                <p><strong>Página Web:</strong> [www.tu-sitio-web.com]</p>
-                <p><strong>Domicilio:</strong> [Tu Dirección Completa]</p>
+                <p><strong>Razón Social:</strong>602</p>
+                <p><strong>Correo Electrónico:</strong>alejandrobenito@gmail.com</p>
+                <p><strong>Página Web:</strong>normateca.com</p>
+                <p><strong>Domicilio:</strong>Guanajuato, Mexico.</p>
             </div>
             <h3>Finalidades del Tratamiento de Datos</h3>
             <p>Los datos personales que recabamos de usted, los utilizaremos para las siguientes finalidades que son necesarias para el servicio que solicita:</p>
@@ -283,10 +283,10 @@
             <p>Usted tiene derecho a conocer qué datos personales tenemos de usted, para qué los utilizamos y las condiciones del uso que les damos (Acceso). Asimismo, es su derecho solicitar la corrección de su información personal en caso de que esté desactualizada, sea inexacta o incompleta (Rectificación); que la eliminemos de nuestros registros o bases de datos cuando considere que la misma no está siendo utilizada adecuadamente (Cancelación); así como oponerse al uso de sus datos personales para fines específicos (Oposición).</p>
             <h3>Medios para Ejercer sus Derechos ARCO</h3>
             <p>Para ejercer cualquiera de los derechos ARCO, usted deberá presentar la solicitud respectiva a través del siguiente medio:</p>
-            <p><strong>Correo electrónico:</strong> [privacidad@tu-empresa.com]</p>
+            <p><strong>Correo electrónico:</strong> alejandrobenito@gmail.com</p>
             <h3>Modificaciones al Aviso de Privacidad</h3>
             <p>Nos reservamos el derecho de efectuar en cualquier momento modificaciones o actualizaciones al presente aviso de privacidad, para la atención de novedades legislativas, políticas internas o nuevos requerimientos para la prestación u ofrecimiento de nuestros servicios o productos.</p>
-            <p><strong>Fecha de última actualización:</strong> [Fecha Actual]</p>
+            <p><strong>Fecha de última actualización:</strong>21 de Septiembre del 2025</p>
         </div>
     </div>
 </div>
@@ -368,6 +368,28 @@ const sectionObserver = new IntersectionObserver((entries) => {
 document.querySelectorAll('section[id]').forEach(section => {
     sectionObserver.observe(section);
 });
+</script>
+
+
+<script>
+// Mostrar el modal al hacer clic en el enlace
+document.getElementById('aviso-privacidad-link').addEventListener('click', function(e) {
+    e.preventDefault();
+    document.getElementById('modal-privacidad').style.display = 'block';
+});
+
+// Ocultar el modal al hacer clic en la X
+document.getElementById('close-modal').onclick = function() {
+    document.getElementById('modal-privacidad').style.display = 'none';
+};
+
+// Ocultar el modal al hacer clic fuera del contenido
+window.onclick = function(event) {
+    var modal = document.getElementById('modal-privacidad');
+    if (event.target == modal) {
+        modal.style.display = 'none';
+    }
+};
 </script>
 </body>
 </html>
